--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Notes</title>
     <script type="text/javascript" src="note-model.js"></script>
-    <script type="text/javascript" src="test-note-model.js"></script>
+    <script type="text/javascript" src="note-list-model.js"></script>
+    <script type="text/javascript" src="./tests/test-note-model.js"></script>
+    <script type="text/javascript" src="./tests/test-note-list-model.js"></script>
   </head>
   <body>
 
