Can return a list as HTML

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Notes</title>
-    <script type="text/javascript" src="note-model.js"></script>
-    <script type="text/javascript" src="note-list-model.js"></script>
+    <link href="./public/css/style.css" rel="stylesheet" type="text/css" />
+    <!-- Unit testing scripts -->
+    <script type="text/javascript" src="./public/js/note-model.js"></script>
+    <script type="text/javascript" src="./public/js/note-list-model.js"></script>
+    <script type="text/javascript" src="./public/js/note-list-view.js"></script>
+    <!-- Javascript scripts -->
     <script type="text/javascript" src="./tests/test-note-model.js"></script>
     <script type="text/javascript" src="./tests/test-note-list-model.js"></script>
+    <script type="text/javascript" src="./tests/test-note-list-view.js"></script>
   </head>
   <body>
 
