Created a view model and tests - refactored tests to employ assert.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./public/js/note-list-model.js"></script>
     <script type="text/javascript" src="./public/js/note-list-view.js"></script>
     <!-- Javascript scripts -->
+    <script type="text/javascript" src="./tests/assert.js"></script>
     <script type="text/javascript" src="./tests/test-note-model.js"></script>
     <script type="text/javascript" src="./tests/test-note-list-model.js"></script>
     <script type="text/javascript" src="./tests/test-note-list-view.js"></script>
