--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <script type="text/javascript" src="./tests/test-note-list-view.js"></script>
   </head>
   <body>
-    <div id="app">
-      <div class="container">
-        <h1>Notes</h1>
-      </div>
+    <div class="container">
+      <h1 id="title">Notes</h1>
     </div>
+    <script type="text/javascript" src="./src/note-controller.js"></script>
   </body>
 </html>
