--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Notes</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/jamestheidge/poopbot/master/favicon.ico" />
   </head>
   <body>
     <div class="container">
@@ -17,7 +18,7 @@
     <script type="text/javascript" src="./app/models/note-model.js"></script>
     <script type="text/javascript" src="./app/models/note-list-model.js"></script>
     <script type="text/javascript" src="./app/models/note-list-view.js"></script>
-    <script type="text/javascript" src="./app/models/note-html.js"></script>
+    <script type="text/javascript" src="./app/models/note-controller.js"></script>
     <script type="text/javascript" src="./app/models/note-single-view.js"></script>
 
     <!-- Spec -->
