Single note view

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <script type="text/javascript" src="./spec/test-note-list-model.js"></script>
     <script type="text/javascript" src="./spec/test-note-list-view.js"></script>
     <script type="text/javascript" src="./spec/test-note-list-controller.js"></script>
+    <script type="text/javascript" src="./spec/test-note-single-view.js"></script>
   </body>
 </html>
