--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Notes</title>
+    <title>Goat Notes</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/jamestheidge/poopbot/master/favicon.ico" />
+    <link rel="shortcut icon" href="https://www.freefavicon.com/freefavicons/animal/goat-152-196466.png" />
   </head>
   <body>
     <div class="container">
-      <h1 id="title">Notes</h1>
+      <h1 id="title">Goat Notes</h1>
       <div id="notes"></div>
     </div>
     <!-- Controllers -->
