--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Goat Notes</title>
+    <title>Notes</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="https://www.freefavicon.com/freefavicons/animal/goat-152-196466.png" />
   </head>
   <body>
     <div class="container">
-      <h1 id="title">Goat Notes</h1>
+      <h1 id="title">Notes</h1>
       <div id="notes"></div>
     </div>
+
     <!-- Controllers -->
     <script type="text/javascript" src="./app/controllers/note-controller.js"></script>
 
@@ -28,5 +29,6 @@
     <script type="text/javascript" src="./spec/test-note-list-view.js"></script>
     <script type="text/javascript" src="./spec/test-note-list-controller.js"></script>
     <script type="text/javascript" src="./spec/test-note-single-view.js"></script>
+
   </body>
 </html>
