Spiked a form entry for capturing new notes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="container">
       <h1 id="title">Notes</h1>
       <div id="notes"></div>
+      <form id="text" action="#" method="post">
+        <textarea id="textarea" name="name" rows="5" cols="30"></textarea>
+        <button id="submit" type="submit" name="submit">Submit</button>
+      </form>
     </div>
 
     <!-- Controllers -->
@@ -29,6 +33,8 @@
     <script type="text/javascript" src="./spec/test-note-list-view.js"></script>
     <script type="text/javascript" src="./spec/test-note-list-controller.js"></script>
     <script type="text/javascript" src="./spec/test-note-single-view.js"></script>
+    <script>
 
+    </script>
   </body>
 </html>
