Styling: add a small amoutn of styling

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Notes</title>
+    <title>Thoughts</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="https://www.freefavicon.com/freefavicons/animal/goat-152-196466.png" />
   </head>
   <body>
     <div class="container">
-      <h1 id="title">Notes</h1>
-      <div id="notes"></div>
-      <form id="text" action="#" method="post">
-        <textarea id="textarea" name="name" rows="5" cols="30"></textarea>
-        <button id="submit" type="submit" name="submit">Submit</button>
-      </form>
+      <h1 id="title">Thoughts</h1>
+      <section class'box'>
+        <form id="text" action="#" method="post">
+          <textarea id="textarea" name="name" rows="3" cols="30" placeholder="Enter a thought..."></textarea>
+          <button id="submit" type="submit" name="submit">Submit</button>
+        </form>
+        <div id="notes"></div>
+      </section>
     </div>
-
     <!-- Controllers -->
     <script type="text/javascript" src="./app/controllers/note-controller.js"></script>
 
